@@ -80,6 +80,21 @@ b = load ':OUTPATH:.orc_params.intermediate' using OrcStorage();
 store b into ':OUTPATH:';\,
                         'verify_pig_script' => q\a = load ':INPATH:/singlefile/studenttab10k' as (name:chararray, age:int, gpa:float);
 store a into ':OUTPATH:';\,
+                        },
+# Tests 5 : Test loading null map key
+                        {
+                        'num' => 5,
+                        'notmq' => 1,
+                        'pig' => q\
+a = load ':INPATH:/singlefile/studentnulltab10k' as (name:chararray, age);
+b = foreach a generate TOMAP(name, age) as m;
+store b into ':OUTPATH:.intermediate' using OrcStorage();
+exec
+c = load ':OUTPATH:.intermediate' using OrcStorage();
+store c into ':OUTPATH:';\,
+                        'verify_pig_script' => q\a = load ':INPATH:/singlefile/studentnulltab10k' as (name:chararray, age);
+b = foreach a generate (name is null ? [] : TOMAP(name, age));
+store b into ':OUTPATH:';\,
                         }
                         ]
                 },
